force-app/main/default/objects/Case/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <description>Sustituye al campo estándar asunto, solo se habilita cuando para tipo consulta</description>
    <label>Asunto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tema__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aclaración cuota GPO</fullName>
            </value>
            <value>
                <fullName>Aclaración facturas</fullName>
            </value>
            <value>
                <fullName>Alta contador</fullName>
            </value>
            <value>
                <fullName>Anulación pedido gas</fullName>
            </value>
            <value>
                <fullName>Atención usuario</fullName>
                <isActive>false</isActive>
                <label>Atención usuario</label>
            </value>
            <value>
                <fullName>Baja contrato</fullName>
            </value>
            <value>
                <fullName>Baja instalación</fullName>
            </value>
            <value>
                <fullName>Bloqueo instalación</fullName>
            </value>
            <value>
                <fullName>Cambio detalles cuenta cliente</fullName>
            </value>
            <value>
                <fullName>Cambio titularidad</fullName>
            </value>
            <value>
                <fullName>Camión suministro</fullName>
            </value>
            <value>
                <fullName>Campaña solidaria</fullName>
            </value>
            <value>
                <fullName>Cancelación automáticos Covid-19</fullName>
            </value>
            <value>
                <fullName>Carga no completada</fullName>
            </value>
            <value>
                <fullName>Carga parcial</fullName>
            </value>
            <value>
                <fullName>Cliente con dos cuentas web</fullName>
                <isActive>false</isActive>
                <label>Cliente con dos cuentas web</label>
            </value>
            <value>
                <fullName>Condiciones contrato</fullName>
            </value>
            <value>
                <fullName>Consulta entrega suministro</fullName>
            </value>
            <value>
                <fullName>Consulta nueva web</fullName>
                <isActive>false</isActive>
                <label>Consulta nueva web</label>
            </value>
            <value>
                <fullName>Consulta técnica</fullName>
            </value>
            <value>
                <fullName>Consulta vencimientos</fullName>
            </value>
            <value>
                <fullName>Copia Albarán</fullName>
            </value>
            <value>
                <fullName>Copia documentación Instalación depósito</fullName>
            </value>
            <value>
                <fullName>Duplicado factura</fullName>
                <isActive>false</isActive>
                <label>Duplicado factura</label>
            </value>
            <value>
                <fullName>Facturación real canalizado</fullName>
                <isActive>false</isActive>
                <label>Facturación real canalizado</label>
            </value>
            <value>
                <fullName>Fraccionar factura</fullName>
            </value>
            <value>
                <fullName>Fraccionar factura impagada</fullName>
            </value>
            <value>
                <fullName>Gestión contrato</fullName>
            </value>
            <value>
                <fullName>Impago factura</fullName>
            </value>
            <value>
                <fullName>INCIDENCIA PAGO Covid-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>