force-app/main/default/objects/Case/fields/Customer_Journey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Journey__c</fullName>
    <inlineHelpText>Son las fases de vida del cliente</inlineHelpText>
    <label>Customer Journey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Información</fullName>
                <label>1. Información</label>
            </value>
            <value>
                <fullName>Contrato (Firma y registro)</fullName>
                <label>2. Contrato (Firma y registro)</label>
            </value>
            <value>
                <fullName>Instalación</fullName>
                <label>3. Instalación</label>
            </value>
            <value>
                <fullName>Primer suministro</fullName>
                <label>4. Primer suministro</label>
            </value>
            <value>
                <fullName>Wellcome</fullName>
                <label>5. Wellcome</label>
            </value>
            <value>
                <fullName>Primera factura</fullName>
                <label>6. Primera factura</label>
            </value>
            <value>
                <fullName>Siguientes llenados</fullName>
                <label>7. Siguientes llenados</label>
            </value>
            <value>
                <fullName>Siguientes facturas</fullName>
                <label>8. Siguientes facturas</label>
            </value>
            <value>
                <fullName>Servicios Post-venta</fullName>
                <label>9. Servicios Post-venta</label>
            </value>
            <value>
                <fullName>Consultas/Quejas</fullName>
                <label>10. Consultas/Quejas</label>
            </value>
            <value>
                <fullName>Retención / Finalización</fullName>
                <label>11. Retención / Finalización</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <label>12. Loyalty</label>
            </value>
            <value>
                <fullName>Otros</fullName>
                <label>13. Otros</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>