force-app/main/default/objects/Case/fields/Equipo__c.field-meta.xml
<CustomField>
    <fullName>Equipo__c</fullName>
    <label>Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATC_Atención al Cliente</fullName>
            </value>
            <value>
                <fullName>C&amp;C_Credit &amp; Collections</fullName>
            </value>
            <value>
                <fullName>CC_Call Center</fullName>
            </value>
            <value>
                <fullName>COM_Ventas terreno</fullName>
            </value>
            <value>
                <fullName>FACT_Facturación</fullName>
            </value>
            <value>
                <fullName>IS_Internal Sales</fullName>
            </value>
            <value>
                <fullName>LG_Logística</fullName>
            </value>
            <value>
                <fullName>TEC_Técnico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>