force-app/main/default/objects/Case/fields/Exp_Consumo__c.field-meta.xml
<CustomField>
    <fullName>Exp_Consumo__c</fullName>
    <description>Campo para registrar en nº de expediente de las reclamaciones de consumo</description>
    <inlineHelpText>Campo para registrar en nº de expediente de las reclamaciones de consumo</inlineHelpText>
    <label>Exp. Consumo</label>
    <length>40</length>
    <type>Text</type>
</CustomField>