force-app/main/default/objects/Case/fields/Fecha_max_contestacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_max_contestacion__c</fullName>
    <description>Esta fecha se determina en base al plazo máximo para contestar que acuerda la Autoridad de Consumo</description>
    <inlineHelpText>Esta fecha se determina en base al plazo máximo para contestar que acuerda la Autoridad de Consumo</inlineHelpText>
    <label>Fecha máx. contestación</label>
    <type>Date</type>
</CustomField>