force-app/main/default/objects/Case/fields/Fecha_primera_llamada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_primera_llamada__c</fullName>
    <label>Fecha primer contacto</label>
    <type>DateTime</type>
</CustomField>