force-app/main/default/objects/Case/fields/mes_numero__c.field-meta.xml
<CustomField>
    <fullName>mes_numero__c</fullName>
    <formula>MONTH(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>mes_numero</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>