force-app/main/default/objects/Case/fields/Tema__c.field-meta.xml
<CustomField>
    <fullName>Tema__c</fullName>
    <label>Tema</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceso Web</fullName>
            </value>
            <value>
                <fullName>Adm. Comercial</fullName>
            </value>
            <value>
                <fullName>Atención recibida por la empresa transportista</fullName>
            </value>
            <value>
                <fullName>Atención recibida telefónicamente</fullName>
            </value>
            <value>
                <fullName>Canalizado sin gas</fullName>
            </value>
            <value>
                <fullName>Carga no completada</fullName>
            </value>
            <value>
                <fullName>Cliente con entrega automática que se ha quedado sin gas (con Telemedida)</fullName>
            </value>
            <value>
                <fullName>Cliente con entrega automática que se ha quedado sin gas (sin Telemedida)</fullName>
            </value>
            <value>
                <fullName>Cliente con producto Primaconta se queda sin gas</fullName>
            </value>
            <value>
                <fullName>Cliente sin gas</fullName>
            </value>
            <value>
                <fullName>Cliente sin gas por estar el nivel depósito clavado</fullName>
            </value>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>Contador producto Primaconta no emite señal</fullName>
            </value>
            <value>
                <fullName>Contador usuario PC no marca correctamente</fullName>
            </value>
            <value>
                <fullName>Cuotas GPO</fullName>
            </value>
            <value>
                <fullName>Demora en entrega de producto</fullName>
            </value>
            <value>
                <fullName>Demora en entrega de producto 72h. ( cliente se queda sin gas)</fullName>
            </value>
            <value>
                <fullName>El cliente solicita una cantidad y llenamos el deposito</fullName>
            </value>
            <value>
                <fullName>Error lecturas lector</fullName>
            </value>
            <value>
                <fullName>Error vencimiento facturas</fullName>
            </value>
            <value>
                <fullName>Extintores (revisión y cambio)</fullName>
            </value>
            <value>
                <fullName>Factura / Abono</fullName>
            </value>
            <value>
                <fullName>Facturación por pesada no realizada</fullName>
            </value>
            <value>
                <fullName>Fallo de instrumentación</fullName>
            </value>
            <value>
                <fullName>Fallo de los reguladores</fullName>
            </value>
            <value>
                <fullName>Fallo del PLC</fullName>
            </value>
            <value>
                <fullName>Fallo del SAI</fullName>
            </value>
            <value>
                <fullName>Fallo eléctrico</fullName>
            </value>
            <value>
                <fullName>Fallos de detectores de gas</fullName>
            </value>
            <value>
                <fullName>Falta de información (precios, cambios facturación…)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>