force-app/main/default/objects/Case/fields/Tiempo_hasta_primer_contacto__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_hasta_primer_contacto__c</fullName>
    <formula>(Fecha_primera_llamada__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo hasta primer contacto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>