force-app/main/default/objects/Case/fields/tiempo_resolucion__c.field-meta.xml
<CustomField>
    <fullName>tiempo_resolucion__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de resolución</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>