force-app/main/default/objects/Case/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipología</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipo__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IS01_Solicitud de renegociación condiciones venta</fullName>
            </value>
            <value>
                <fullName>IS02_Solicitud Baja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>