force-app/main/default/objects/Case/listViews/Cola_Abinitio_Case.listView-meta.xml
<ListView>
    <fullName>Cola_Abinitio_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cola Abinitio</label>
    <queue>Cola_Abinitio</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>