force-app/main/default/objects/Case/listViews/ITAC_Case.listView-meta.xml
<ListView>
    <fullName>ITAC_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ITAC</label>
    <queue>ITAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>