force-app/main/default/objects/Case/listViews/Legal_Case.listView-meta.xml
<ListView>
    <fullName>Legal_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal</label>
    <queue>Legal</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>