force-app/main/default/objects/Case/listViews/MPGAS_Case.listView-meta.xml
<ListView>
    <fullName>MPGAS_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>MPGAS</label>
    <queue>MPGAS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>