force-app/main/default/objects/Case/listViews/MyOpenCases.listView-meta.xml
<ListView>
    <fullName>MyOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.TYPE</columns>
    <columns>Tema__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Customer_Journey__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Mis Casos Abiertos</label>
    <language>es</language>
</ListView>