force-app/main/default/objects/Case/listViews/Origen_paymefy.listView-meta.xml
<ListView>
    <fullName>Origen_paymefy</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Asunto__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Paymefy</value>
    </filters>
    <label>Origen paymefy</label>
    <language>es</language>
</ListView>