force-app/main/default/objects/Case/listViews/Primagas_Comercial_Case.listView-meta.xml
<ListView>
    <fullName>Primagas_Comercial_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Tema__c</columns>
    <columns>Asunto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Primagas Comercial</label>
    <queue>Primagas_Comercial</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>