force-app/main/default/objects/Case/listViews/Primagas_Granel_Case.listView-meta.xml
<ListView>
    <fullName>Primagas_Granel_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>Tema__c</columns>
    <columns>Asunto__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>En espera,Abierto</value>
    </filters>
    <label>Primagas ATC Granel</label>
    <queue>Primagas_ATC_Granel</queue>
</ListView>